Fix styling for hamburger menu on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -72,8 +72,16 @@ h2 {
     z-index: 1000; 
 }
 
+.navbar-toggler {
+    border: none;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
 .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 16 16' xmlns='www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' d='M1 2.75h14M1 8h14M1 13.25h14'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    width: 30px;
+    height: 30px;
+    z-index: 1111;
 }
 
 .lr-pad-none {
